feat: expand design pattern lab and learning book
Add a selectable catalog for all 22 examples, strengthen pattern implementations and tests, and introduce the reproducible Markdown/PDF book toolchain.