@@ -1,43 +1,58 @@
 package com.can.structural.proxy;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public class ThirdPartyYouTubeClass implements ThirdPartyYouTubeLib {
 
-    private int listRequestCount;
-    private final Map<String, Integer> infoRequestCount = new HashMap<>();
-    private final Map<String, Integer> downloadRequestCount = new HashMap<>();
+    private final AtomicInteger listRequestCount = new AtomicInteger();
+    private final Map<String, AtomicInteger> infoRequestCount = new ConcurrentHashMap<>();
+    private final Map<String, AtomicInteger> downloadRequestCount = new ConcurrentHashMap<>();
 
     @Override
     public List<String> listVideos() {
-        listRequestCount++;
-        return Arrays.asList("design-patterns-intro", "proxy-pattern", "solid-principles");
+        listRequestCount.incrementAndGet();
+        return List.of("design-patterns-intro", "proxy-pattern", "solid-principles");
     }
 
     @Override
     public String getVideoInfo(String id) {
-        infoRequestCount.merge(id, 1, Integer::sum);
-        return "Video[" + id + "] - Proxy pattern anlatımı";
+        String exactId = requireId(id);
+        infoRequestCount.computeIfAbsent(
+            exactId,
+            ignored -> new AtomicInteger()
+        ).incrementAndGet();
+        return "Video[" + exactId + "] - Proxy pattern anlatımı";
     }
 
     @Override
     public String downloadVideo(String id) {
-        downloadRequestCount.merge(id, 1, Integer::sum);
-        return "Downloaded: " + id + ".mp4";
+        String exactId = requireId(id);
+        downloadRequestCount.computeIfAbsent(
+            exactId,
+            ignored -> new AtomicInteger()
+        ).incrementAndGet();
+        return "Downloaded: " + exactId + ".mp4";
     }
 
     public int getListRequestCount() {
-        return listRequestCount;
+        return listRequestCount.get();
     }
 
     public int getInfoRequestCount(String id) {
-        return infoRequestCount.getOrDefault(id, 0);
+        AtomicInteger count = infoRequestCount.get(id);
+        return count == null ? 0 : count.get();
     }
 
     public int getDownloadRequestCount(String id) {
-        return downloadRequestCount.getOrDefault(id, 0);
+        AtomicInteger count = downloadRequestCount.get(id);
+        return count == null ? 0 : count.get();
+    }
+
+    private static String requireId(String id) {
+        return Objects.requireNonNull(id, "video id cannot be null");
     }
 }
